package com.alouer.commands;

public interface Command {
    void execute();
}
