public class Lesson {

    public enum LessonType {
        PRIVATE, SEMI_PRIVATE, GROUP
    }

    private int id;
    private LessonType type;
}
