@startuml

title Alouer Package Diagram

package "com.alouer.collections" {
  class "BookingCollection"
  class "ChildCollection"
  class "ClientCollection"
  class "InstructorCollection"
  class "LessonsCollection"
  class "LocationCollection"
}

package "com.alouer.commands" {
  package "admin" {
    class "CreateLessonCommand"
    class "DeleteUserCommand"
  }
  
  package "client" {
    class "AddDependentCommand"
    class "CreateBookingCommand"
    class "ViewEditBookingsCommand"
  }
  
  package "instructor" {
    class "AcceptOfferingCommand"
    class "ViewEditOfferingsCommand"
  }

  package "registration" {
    class "RegisterClientCommand"
    class "RegisterInstructorCommand"
  }
  
  interface "Command"
  class "LogOutCommand"
}

package "com.alouer.enums" {
  enum "DayOfWeek" {
    MONDAY
    TUESDAY
    WEDNESDAY
    THURSDAY
    FRIDAY
    SATURDAY
    SUNDAY
  }
  
  enum "LessonType" {
    GROUP
    PRIVATE
  }
  
  enum "UserType" {
    CLIENT
    INSTRUCTOR
  }
}

package "com.alouer.factories" {
  class "CommandFactory"
  class "RegistrationFactory"
}

package "com.alouer.models.lessonManagement" {
  class "Booking" 
  class "Lesson" 
}

package "com.alouer.models" {
  class "Administrator" <<Singleton>>
  class "Child"
  class "Client"
  class "Instructor"
  class "Location"
}

package "com.alouer.utils" {
  class "BackendUtils"
  class "ConsoleUtils"
  class "DatabaseManager"
}

package "com.alouer" {
  class "Terminal"
}

' Associations
Command <|-- CreateLessonCommand
Command <|-- DeleteUserCommand
Command <|-- AddDependentCommand
Command <|-- CreateBookingCommand
Command <|-- ViewEditBookingsCommand
Command <|-- AcceptOfferingCommand
Command <|-- ViewEditOfferingsCommand
Command <|-- RegisterClientCommand
Command <|-- RegisterInstructorCommand
Command <|-- LogOutCommand
Terminal -> utils : uses
Terminal -> factories : uses
factories -> commands : interfaces
commands -> collections : uses
collections -> models : manages
models -> enums : uses

@enduml
